--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -117,5 +117,5 @@
   "sn-blurbs:sn3.2": "Pasenadi indaga sobre coisas que causam o sofrimento quando surgem dentro de si.",
   "sn-blurbs:sn3.3": "Pasenadi pergunta se algo que nasceu pode escapar da velhice e da morte.",
   "sn-blurbs:sn3.4": "Ao relatar uma reflexão que lhe ocorrera durante um retiro, Pasenadi diz que os que praticam maus atos tratam a si como inimigos. O Buda expressa concordância em versos.",
-  "sn-blurbs:sn3.5": "Ainda que protegido por um exército, quem pratica maus atos está desprotegido."
+  "sn-blurbs:sn3.5": "Ainda que protegido por um exército, quem pratica o mal está desprotegido."
 }
