--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -121,5 +121,6 @@
   "mn1:28-49.7": "બ્રહ્માને બ્રહ્મા …",
   "mn1:28-49.8": "આભાસર દેવોને અભાસર દેવો …",
   "mn1:28-49.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …",
-  "mn1:28-49.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …"
+  "mn1:28-49.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …",
+  "mn1:28-49.11": "અભિભૂ દેવોને અભિભૂ દેવો …"
 }
