--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -125,5 +125,6 @@
   "mn1:28-49.11": "અભિભૂ દેવોને અભિભૂ દેવો …",
   "mn1:28-49.12": "અનંત આકાશના સ્થાનને અનંત આકાશનું સ્થાન …",
   "mn1:28-49.13": "અનંત ચેતનાના સ્થાનને અનંત ચેતનાનું સ્થાન …",
-  "mn1:28-49.14": "સર્વઅભાવના સ્થાનને  સર્વઅભાવનુ સ્થાન …"
+  "mn1:28-49.14": "સર્વઅભાવના સ્થાનને  સર્વઅભાવનુ સ્થાન …",
+  "mn1:28-49.15": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના સ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન …"
 }
