--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -131,5 +131,6 @@
   "mn1:28-49.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:28-49.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
   "mn1:28-49.19": "જાણેલાને જાણેલુ …",
-  "mn1:28-49.20": "એકતાને એકતા …"
+  "mn1:28-49.20": "એકતાને એકતા …",
+  "mn1:28-49.21": "વિવિધતાને વિવિધતા …"
 }
