--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -134,5 +134,6 @@
   "mn1:28-49.20": "એકતાને એકતા …",
   "mn1:28-49.21": "વિવિધતાને વિવિધતા …",
   "mn1:28-49.22": "સર્વને સર્વ …",
-  "mn1:28-49.23": "નિર્વાણને નિર્વાણ …"
+  "mn1:28-49.23": "નિર્વાણને નિર્વાણ …",
+  "mn1:50.1": "પરંતુ નિર્વાણને નિર્વાણ સમજ઼ી એમણે પોતાને નિર્વાણ ના માનવું જોઇએ, પોતાને નિર્વાણમાં ના માનવું જોઈએ, પોતાને નિર્વાણથી ના માનવું જોઇએ, નિર્વાણ મારું છે એવું ના માનવું જોઇએ, નિર્વાણમાં આનંદ ના લેવો જોઇએ."
 }
