--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -828,7 +828,7 @@
   "pli-tv-kd2:27.1.2": "He thought, ",
   "pli-tv-kd2:27.1.3": "“The Buddha has laid down a rule ",
   "pli-tv-kd2:27.1.4": "that one shouldn’t do the observance-day procedure if one has an offense. ",
-  "pli-tv-kd2:27.1.5": "But I’ve committed an offense. ",
+  "pli-tv-kd2:27.1.5": "And I’ve committed an offense. ",
   "pli-tv-kd2:27.1.6": "So what should I do?” ",
   "pli-tv-kd2:27.1.7": "They told the Buddha. ",
   "pli-tv-kd2:27.1.8": "“On the observance day it may happen that a monk has committed an offense. ",
