--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -853,12 +853,12 @@
   "pli-tv-kd2:27.4.2": "He thought, ",
   "pli-tv-kd2:27.4.3": "“The Buddha has laid down a rule ",
   "pli-tv-kd2:27.4.4": "that one shouldn’t do the observance-day procedure if one has an offense. ",
-  "pli-tv-kd2:27.4.5": "But I’ve committed an offense. ",
+  "pli-tv-kd2:27.4.5": "And I’ve committed an offense. ",
   "pli-tv-kd2:27.4.6": "So what should I do?” ",
-  "pli-tv-kd2:27.4.8": "“It may happen that a monk remembers an offense while the Monastic Code is being recited. ",
+  "pli-tv-kd2:27.4.8": "“It may be that a monk remembers an offense while the Monastic Code is being recited. ",
   "pli-tv-kd2:27.4.9": "He should say to a monk sitting next to him, ",
   "pli-tv-kd2:27.4.10": "ʻI’ve committed such-and-such an offense. ",
-  "pli-tv-kd2:27.4.11": "Once this meeting is finished, I’ll make amends for it.’ They can then continue the observance-day procedure by listening to the recitation of the Monastic Code. You shouldn’t allow this to create an obstacle to the doing of the observance-day procedure. ",
+  "pli-tv-kd2:27.4.11": "Once this meeting is finished, I’ll make amends for it.’ They can then continue the observance-day procedure and listen to the recitation of the Monastic Code. This is not an obstacle to doing the observance-day procedure. ",
   "pli-tv-kd2:27.5.1": "It may happen, while the Monastic Code is being recited, that a monk becomes unsure if he’s committed an offense. ",
   "pli-tv-kd2:27.5.2": "He should say to a monk sitting next to him, ",
   "pli-tv-kd2:27.5.3": "ʻI’m unsure if I’ve committed such-and-such an offense. ",
