--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -887,8 +887,8 @@
   "pli-tv-kd2:27.8.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd2:27.8.4": "This whole Sangha is unsure if it has committed the same offense. ",
   "pli-tv-kd2:27.8.5": "When the Sangha is sure, it should make amends for this offense.’ ",
-  "pli-tv-kd2:27.8.6": "Once this has been said, they can do the observance-day procedure by listening to the recitation of the Monastic Code. ",
-  "pli-tv-kd2:27.8.7": "You shouldn’t allow this to create an obstacle to the doing of the observance-day procedure. ",
+  "pli-tv-kd2:27.8.6": "Once this has been said, they can do the observance-day procedure and listen to the recitation of the Monastic Code. ",
+  "pli-tv-kd2:27.8.7": "This is not an obstacle to doing the observance-day procedure. ",
   "pli-tv-kd2:27.9.1": "“When a sangha has entered the rainy-season residence in a certain monastery, it may happen that the whole sangha has committed the same offense. ",
   "pli-tv-kd2:27.9.2": "Those monks should straightaway send one monk to a neighboring monastery: ",
   "pli-tv-kd2:27.9.3": "ʻGo and make amends for this offense. ",
