--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -388,7 +388,7 @@
   "pli-tv-kd4:6.3.20": "When the Sangha sees another monk who is pure and free from offenses, it should make amends for this offense in his presence.’ ",
   "pli-tv-kd4:6.3.21": "Once this has been said, they can do the invitation procedure. ",
   "pli-tv-kd4:6.3.22": "You shouldn’t allow this to create an obstacle to the doing of the invitation procedure. ",
-  "pli-tv-kd4:6.3.23": "“On the invitation day it may happen that the whole sangha in a certain monastery is unsure if it has committed the same offense. ",
+  "pli-tv-kd4:6.3.23": "“On the invitation day It may be that the whole sangha in a certain monastery is unsure if it has committed the same offense. ",
   "pli-tv-kd4:6.3.24": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd4:6.3.25": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd4:6.3.26": "This whole Sangha is unsure if it has committed the same offense. ",
