--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1051,7 +1051,7 @@
   "pli-tv-kd4:16.21.6": "The monks who regard it as an offense of wrong speech should take that monk to one side and deal with him according to the rule. They should then approach the Sangha and say: ",
   "pli-tv-kd4:16.21.7": "‘This monk has made amends for the offense he’s committed. ",
   "pli-tv-kd4:16.21.8": "If it seems appropriate to the Sangha, the Sangha should do the invitation procedure.’ ",
-  "pli-tv-kd4:16.22.1": "It may happen on the invitation day that a monk has committed an offense of wrong speech. ",
+  "pli-tv-kd4:16.22.1": "It may be on the invitation day that a monk has committed an offense of wrong speech. ",
   "pli-tv-kd4:16.22.2": "Some monks regard it as an offense of wrong speech, but others as a serious offense … ",
   "pli-tv-kd4:16.22.3": "Some monks regard it as an offense of wrong speech, but others as an offense entailing confession … ",
   "pli-tv-kd4:16.22.4": "Some monks regard it as an offense of wrong speech, but others as an offense entailing acknowledgment … ",
