--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1043,7 +1043,7 @@
   "pli-tv-kd4:16.20.6": "The monks who regard it as a serious offense should take that monk to one side and deal with him according to the rule. They should then approach the Sangha and say: ",
   "pli-tv-kd4:16.20.7": "‘This monk has made amends for the offense he’s committed. ",
   "pli-tv-kd4:16.20.8": "If it seems appropriate to the Sangha, the Sangha should do the invitation procedure.’ ",
-  "pli-tv-kd4:16.21.1": "“It may happen on the invitation day that a monk has committed an offense entailing confession, ",
+  "pli-tv-kd4:16.21.1": "“It may be on the invitation day that a monk has committed an offense entailing confession, ",
   "pli-tv-kd4:16.21.2": "an offense entailing acknowledgment … ",
   "pli-tv-kd4:16.21.3": "an offense of wrong conduct … ",
   "pli-tv-kd4:16.21.4": "an offense of wrong speech. ",
