--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1030,7 +1030,7 @@
   "pli-tv-kd4:16.18.6": "an offense of wrong conduct, ",
   "pli-tv-kd4:16.18.7": "or an offense of wrong speech, he should be dealt with according to the rule. The Sangha should then do the invitation procedure. ",
   "pli-tv-kd4:16.19.0": "23. Grounds for a serious offense, etc. ",
-  "pli-tv-kd4:16.19.1": "“It may happen on the invitation day that a monk has committed a serious offense. ",
+  "pli-tv-kd4:16.19.1": "“It may be on the invitation day that a monk has committed a serious offense. ",
   "pli-tv-kd4:16.19.2": "Some monks regard it as a serious offense, but others as an offense entailing suspension. ",
   "pli-tv-kd4:16.19.3": "The monks who regard it as a serious offense should take that monk to one side and deal with him according to the rule. They should then approach the Sangha and say: ",
   "pli-tv-kd4:16.19.4": "‘This monk has made amends for the offense he’s committed. ",
