--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1035,7 +1035,7 @@
   "pli-tv-kd4:16.19.3": "The monks who regard it as a serious offense should take that monk to one side and deal with him according to the rule. They should then approach the Sangha and say: ",
   "pli-tv-kd4:16.19.4": "‘This monk has made amends for the offense he’s committed. ",
   "pli-tv-kd4:16.19.5": "If it seems appropriate to the Sangha, the Sangha should do the invitation procedure.’ ",
-  "pli-tv-kd4:16.20.1": "It may happen on the invitation day that a monk has committed a serious offense. ",
+  "pli-tv-kd4:16.20.1": "It may be on the invitation day that a monk has committed a serious offense. ",
   "pli-tv-kd4:16.20.2": "Some monks regard it as a serious offense, but others as an offense entailing confession … ",
   "pli-tv-kd4:16.20.3": "Some monks regard it as a serious offense, but others as an offense entailing acknowledgment … ",
   "pli-tv-kd4:16.20.4": "Some monks regard it as a serious offense, but others as an offense of wrong conduct … ",
