--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -404,7 +404,7 @@
   "pli-tv-kd3:6.24.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.24.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about his sickness and nurse him.’ ",
   "pli-tv-kd3:6.24.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.25.1": "It may happen that a novice monk becomes discontent with the spiritual life, ",
+  "pli-tv-kd3:6.25.1": "It may be that a novice monk becomes discontent with the spiritual life, ",
   "pli-tv-kd3:6.25.2": "becomes anxious, ",
   "pli-tv-kd3:6.25.3": "has a wrong view, ",
   "pli-tv-kd3:6.25.4": "or wants to ask about his age, ",
