--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -422,7 +422,7 @@
   "pli-tv-kd3:6.27.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.27.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about her sickness and nurse her.’ ",
   "pli-tv-kd3:6.27.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.28.1": "It may happen that a novice nun becomes discontent with the spiritual life, ",
+  "pli-tv-kd3:6.28.1": "It may be that a novice nun becomes discontent with the spiritual life, ",
   "pli-tv-kd3:6.28.2": "becomes anxious, ",
   "pli-tv-kd3:6.28.3": "has a wrong view, ",
   "pli-tv-kd3:6.28.4": "or wants to ask about her age, ",
