--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1324,7 +1324,7 @@
   "pli-tv-kd2:34.6.19": "ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
   "pli-tv-kd2:34.6.20": "and they then do the observance-day procedure aiming at schism, ",
   "pli-tv-kd2:34.6.21": "there’s a serious offense. ",
-  "pli-tv-kd2:34.7.1": "“It may happen that newly arrived monks hear signs and indications of resident monks: the sound of the feet of someone doing walking meditation, the sound of recitation, the sound of coughing, the sound of sneezing. ",
+  "pli-tv-kd2:34.7.1": "“It may be that newly arrived monks hear signs and indications of resident monks: the sound of the feet of someone doing walking meditation, the sound of recitation, the sound of coughing, the sound of sneezing. ",
   "pli-tv-kd2:34.7.2": "As a consequence, they think there may be resident monks there, but they’re unsure. Then—",
   "pli-tv-kd2:34.7.3": "If they don’t investigate, and they then do the observance-day procedure, there’s an offense of wrong conduct. ",
   "pli-tv-kd2:34.7.4": "If they do investigate, but they don’t see anyone, and they then do the observance-day procedure, there’s no offense. ",
