--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -353,7 +353,7 @@
   "pli-tv-kd3:6.15.3": "ʻPlease come, Venerables, I have a wrong view.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.15.4": "ʻI’ll make her give up that wrong view or get someone else to do it, or I’ll give her a teaching.’ ",
   "pli-tv-kd3:6.15.5": "But you should return within seven days.” ",
-  "pli-tv-kd3:6.16.1": "“It may happen that a nun has committed a heavy offense for which she deserves the trial period, ",
+  "pli-tv-kd3:6.16.1": "“It may be that a nun has committed a heavy offense for which she deserves the trial period, ",
   "pli-tv-kd3:6.16.2": "and she sends a message to the monks: ",
   "pli-tv-kd3:6.16.3": "ʻPlease come, Venerables, I deserve to be given the trial period.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.16.4": "ʻI’ll make an effort to get her given the trial period.’ ",
