--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -302,7 +302,7 @@
   "pli-tv-kd3:6.5.3": "ʻPlease come, Venerables, I have a wrong view.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.5.4": "ʻI’ll make him give up that wrong view or get someone else to do it, or I’ll give him a teaching.’ ",
   "pli-tv-kd3:6.5.5": "But you should return within seven days.” ",
-  "pli-tv-kd3:6.6.1": "“It may happen that a monk has committed a heavy offense for which he deserves to be given probation, ",
+  "pli-tv-kd3:6.6.1": "“It may be that a monk has committed a heavy offense for which he deserves to be given probation, ",
   "pli-tv-kd3:6.6.2": "and he sends a message to the monks: ",
   "pli-tv-kd3:6.6.3": "ʻPlease come, Venerables, I’ve committed a heavy offense for which I deserve to be given probation.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.6.4": "ʻI’ll make an effort to get him given probation, I’ll do the proclamation, or I’ll complete the quorum.’ ",
