--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -361,7 +361,7 @@
   "pli-tv-kd4:6.2.5": "But I’ve committed an offense. ",
   "pli-tv-kd4:6.2.6": "So what should I do?” ",
   "pli-tv-kd4:6.2.7": "They told the Buddha. ",
-  "pli-tv-kd4:6.2.8": "“It may happen that a monk remembers an offense during the invitation procedure. ",
+  "pli-tv-kd4:6.2.8": "“It may be that a monk remembers an offense during the invitation procedure. ",
   "pli-tv-kd4:6.2.9": "He should say to a monk sitting next to him, ",
   "pli-tv-kd4:6.2.10": "ʻI’ve committed such-and-such an offense. ",
   "pli-tv-kd4:6.2.11": "Once this meeting is finished, I’ll make amends for it.’ They can then continue the invitation procedure. ",
