--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -402,7 +402,7 @@
   "pli-tv-kd4:7.1.4": "Perceiving that they were acting according to the Teaching and the Monastic Law, perceiving that the assembly was complete although it was not, they did the invitation procedure. ",
   "pli-tv-kd4:7.1.5": "During the procedure a greater number of resident monks arrived. ",
   "pli-tv-kd4:7.1.6": "They told the Buddha. ",
-  "pli-tv-kd4:7.2.1": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:7.2.1": "“On the invitation day It may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:7.2.2": "They don’t know ",
   "pli-tv-kd4:7.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:7.2.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the invitation procedure. ",
