--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -509,7 +509,7 @@
   "pli-tv-kd4:7.5.63": "And there’s no offense for those who already have invited.” ",
   "pli-tv-kd4:7.5.64": "The group of fifteen on non-offenses is finished. ",
   "pli-tv-kd4:8.1.0": "10. The group of fifteen on perceiving an incomplete assembly as incomplete ",
-  "pli-tv-kd4:8.1.1": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:8.1.1": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:8.1.2": "They know ",
   "pli-tv-kd4:8.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:8.1.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the invitation procedure. ",
