--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -544,7 +544,7 @@
   "pli-tv-kd4:8.3.12": "And there’s an offense of wrong conduct for those who already have invited.” ",
   "pli-tv-kd4:8.3.13": "The group of fifteen on perceiving an incomplete assembly as incomplete is finished. ",
   "pli-tv-kd4:9.1.0": "11. The group of fifteen on being unsure ",
-  "pli-tv-kd4:9.1.1": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:9.1.1": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:9.1.2": "They know ",
   "pli-tv-kd4:9.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:9.1.4": "They think, ʻIs it allowable for us to do the invitation procedure, or is it not?’ Being unsure, they do the invitation procedure. ",
