--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -579,7 +579,7 @@
   "pli-tv-kd4:9.2.26": "And there’s an offense of wrong conduct for those who already have invited.” ",
   "pli-tv-kd4:9.2.27": "The group of fifteen on being unsure is finished. ",
   "pli-tv-kd4:10.1.0": "12. The group of fifteen on being anxious ",
-  "pli-tv-kd4:10.1.1": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:10.1.1": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:10.1.2": "They know ",
   "pli-tv-kd4:10.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:10.1.4": "They think, ʻIt’s allowable for us to do the invitation procedure; it’s not unallowable.’ ",
