--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -618,7 +618,7 @@
   "pli-tv-kd4:10.2.29": "And there’s an offense of wrong conduct for those who already have invited.” ",
   "pli-tv-kd4:10.2.30": "The group of fifteen on being anxious is finished. ",
   "pli-tv-kd4:11.1.0": "13. The group of fifteen on aiming at schism ",
-  "pli-tv-kd4:11.1.1": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.1.1": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.1.2": "They know ",
   "pli-tv-kd4:11.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.1.4": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
