--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -626,7 +626,7 @@
   "pli-tv-kd4:11.1.6": "During the procedure a greater number of resident monks arrive. ",
   "pli-tv-kd4:11.1.7": "In such a case those monks should do the invitation procedure once more. ",
   "pli-tv-kd4:11.1.8": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.1": "On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.1": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.2": "They know ",
   "pli-tv-kd4:11.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.4": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
