--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -658,7 +658,7 @@
   "pli-tv-kd4:11.2.30": "When they’ve just finished, an equal number of resident monks arrive. ",
   "pli-tv-kd4:11.2.31": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:11.2.32": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.33": "On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.33": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.34": "They know ",
   "pli-tv-kd4:11.2.35": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.36": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
