--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -682,7 +682,7 @@
   "pli-tv-kd4:11.2.54": "When they’ve just finished, and none of the gathering has left, an equal number of resident monks arrive. ",
   "pli-tv-kd4:11.2.55": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:11.2.56": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.57": "On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.57": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.58": "They know ",
   "pli-tv-kd4:11.2.59": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.60": "They think, I hope they get lost! I hope they disappear! Who needs them?’ ",
