--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -690,7 +690,7 @@
   "pli-tv-kd4:11.2.62": "When they’ve just finished, and none of the gathering has left, a smaller number of resident monks arrive. ",
   "pli-tv-kd4:11.2.63": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:11.2.64": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.65": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.65": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.66": "They know ",
   "pli-tv-kd4:11.2.67": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.68": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
