--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -698,7 +698,7 @@
   "pli-tv-kd4:11.2.70": "When they’ve just finished, and only some members of the gathering have left, a greater number of resident monks arrive. ",
   "pli-tv-kd4:11.2.71": "In such a case those monks should do the invitation procedure once more. ",
   "pli-tv-kd4:11.2.72": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.73": "On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.73": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.74": "They know ",
   "pli-tv-kd4:11.2.75": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.76": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
